# lab

./: README.md
OpenGL_Cube/: CMakeLists.txt
OpenGL_Cube/shaders/: simple.vert
OpenGL_Cube/source/: Loader.h  MyGlWindow.cpp  MyGlWindow.h  Source.cpp  Viewer.cpp  colorCube.cpp  colorCube.h
OpenGL_basic/: launch.vs.json
OpenGL_basic/shaders/: simple.frag  simple.vert
OpenGL_basic/source/: Loader.h  MyGlWindow.cpp  MyGlWindow.h  Source.cpp
lab1/source/: main.cpp
lab2/: CMakeLists.txt  CMakePresets.json
lab2/source/: main.cpp
lab3/: CMakePresets.json
lab3/source/: main.cpp
lab4/source/: main.cpp
lab5/source/: main.cpp
lab6/source/: main.cpp
lab7/source/: main.cpp
lab8/: CMakeLists.txt
lab8/source/: main.cpp
rester/source/: cow.h  ppm_io.cpp  raster3d.cpp
